Update image paths to use 'fotos/' directory

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="sobre" class="secao-sobre layer-1">
             <div class="container">
                 <div class="sobre-flutuante">
-                    <img src="Imagem do WhatsApp de 2025-11-28 à(s) 19.54.21_b222aa3d.jpg" alt="Foto de Vinicius Teles dos Santos Silva" class="foto-perfil">
+                    <img src="fotos/Imagem do WhatsApp de 2025-11-28 à(s) 19.54.21_b222aa3d.jpg" alt="Foto de Vinicius Teles dos Santos Silva" class="foto-perfil">
                     <div class="texto-sobre fade-in-delay-2">
                         <h2>Sobre Mim</h2>
                         <p>Sou estudante de Ciência da Computação na UNINASSAU, com conhecimentos básicos em HTML, CSS, Python, Banco de Dados, GitHub, Lógica de Programação e Flask. Tenho grande interesse na área de tecnologia e desenvolvimento de sistemas, buscando constantemente aprimorar minhas habilidades por meio dos estudos e da prática.</p>
@@ -33,15 +33,15 @@
                 <h2 class="fade-in-delay-3">Habilidades Técnicas</h2>
                 <div class="habilidades-animadas">
                     <div class="habilidade-item rotate-in">
-                        <img src="programming-languages_17638400.png" alt="HTML" class="habilidade-icone">
+                        <img src="fotos/programming-languages_17638400.png" alt="HTML" class="habilidade-icone">
                         <span>HTML & CSS</span>
                     </div>
                     <div class="habilidade-item rotate-in-delay">
-                        <img src="python_1822899.png" alt="Python" class="habilidade-icone">
+                        <img src="fotos/python_1822899.png" alt="Python" class="habilidade-icone">
                         <span>Python</span>
                     </div>
                     <div class="habilidade-item rotate-in-delay-2">
-                        <img src="github_3291695.png" alt="Git" class="habilidade-icone">
+                        <img src="fotos/github_3291695.png" alt="Git" class="habilidade-icone">
                         <span>Git & GitHub</span>
                     </div>
                 </div>
@@ -64,10 +64,10 @@
                 <h2 class="fade-in-delay-5">Contato</h2>
                 <p class="fade-in-delay-6">Pronto para conversar? Entre em contato!</p>
                 <div class="contato-circulo">
-                    <a href="mailto:vinicciusteles13@gmail.com" class="icone-circulo"><img src="gmail_888853.png" alt="E-mail"></a>
-                    <a href="https://wa.me/5582988878596" target="_blank" class="icone-circulo"><img src="whatsapp_12635043.png" alt="WhatsApp"></a>
-                    <a href="https://github.com/ViniciusTeles06" target="_blank" class="icone-circulo"><img src="github_3291695.png" alt="GitHub"></a>
-                    <a href="https://instagram.com/vinicciusteles" target="_blank" class="icone-circulo"><img src="social_15527900.png" alt="Instagram"></a>
+                    <a href="mailto:vinicciusteles13@gmail.com" class="icone-circulo"><img src="fotos/gmail_888853.png" alt="E-mail"></a>
+                    <a href="https://wa.me/5582988878596" target="_blank" class="icone-circulo"><img src="fotos/whatsapp_12635043.png" alt="WhatsApp"></a>
+                    <a href="https://github.com/ViniciusTeles06" target="_blank" class="icone-circulo"><img src="fotos/github_3291695.png" alt="GitHub"></a>
+                    <a href="https://instagram.com/vinicciusteles" target="_blank" class="icone-circulo"><img src="fotos/social_15527900.png" alt="Instagram"></a>
                 </div>
                 <a href="mailto:vinicciusteles13@gmail.com" class="botao-cta pulse">Envie uma Mensagem</a>
             </div>
